# Asteroids

./: CMakeLists.txt  README.md
config/: asteroids.conf
shaders/: test.frag  test.vert
source/: CMakeLists.txt  main.cpp
source/audio/: sound.cpp  sound.h
source/game/: debug.cpp  debug.h  ecs.cpp  ecs.h  global.cpp  global.h  input.cpp  input.h  loop.cpp  loop.h  quadtree.cpp  quadtree.h
source/math/: aabb.h  math.h  matrix4.h  transform.h  vector3.h  vector4.h
source/rendering/: mesh.cpp  mesh.h  renderer.cpp  renderer.h
source/system/: config.cpp  config.h  fileio.cpp  fileio.h  memory.h  memory_win32.cpp  random.cpp  random.h  system.cpp  system.h
